--- a/SDP1_PART2/build.xml
+++ b/SDP1_PART2/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="SDP1_GUI_" default="default" basedir=".">
-    <description>Builds, tests, and runs the project SDP1_GUI_.</description>
+<project name="SDP1_PART2" default="default" basedir=".">
+    <description>Builds, tests, and runs the project SDP1_PART2.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="SDP1_GUI_-impl.jar">
+        <target name="run" depends="SDP1_PART2-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
