--- a/SDP1_PART2/nbproject/project.properties
+++ b/SDP1_PART2/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/SDP1_GUI_.jar
+dist.jar=${dist.dir}/SDP1_PART2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/SDP1_GUI_
+dist.jlink.output=${dist.jlink.dir}/SDP1_PART2
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=SDP1_GUI_
+jlink.launcher.name=SDP1_PART2
 main.class=net.sdp1.main.MainGame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
