--- a/SDP1_PART2/nbproject/private/private.properties
+++ b/SDP1_PART2/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\nikol\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=/Users/jackduong/Library/Application Support/NetBeans/21/build.properties
